--- a/ExpressionXmlSerializer/ExpressionTools.csproj
+++ b/ExpressionXmlSerializer/ExpressionTools.csproj
@@ -7,4 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="add.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="add.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
